--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mainClass>mjkagone.MainApp</mainClass>
+        <mainClass>kanjitrainer.MainApp</mainClass>
     </properties>
 
     <dependencies>
